minikube/app/service-files/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  namespace: node-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: node-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
